# sql-assistant

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.dev.txt  requirements.test.txt  requirements.txt  run.py  streamlit_run.sh
.github/workflows/: CI.yml
data/db/: tables.txt
notebooks/: Graph SQL assistant.ipynb  SQL Extractor assistant.ipynb  Untitled.ipynb  azure_container_apps_dynamic_sessions_data_analyst.ipynb
sql-assistant/: config.py  logging.py  runner.py
sql_assistant/: agent_log.py  base.py  chains.py  config.py  database.py  front_layer.py  multi_agent_log.py  prompts.py  query.py  state.py  utils.py
sql_assistant/QA/: chat.py  serving.py
sql_assistant/analyst/: chain.py  chat.py  serving.py
sql_assistant/extractor/: SQL.py  chain.py  chat.py  chat_old.py  database.py  download_file.py  serving.py
sql_assistant/extractor/improvements/: download_file.py
sql_assistant/llm/QA/: chat.py  constants.py  utils.py
